--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,8 @@ footer {
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
     background-image: none;
-    overflow: hidden;
+    overflow: visible;
+    position: relative;
   }
   .illustration-section {
     height: 513px;
@@ -154,6 +155,7 @@ footer {
     background-position: bottom  left -29rem;
     left: -8rem;
     top: 5rem;
+    background-repeat: no-repeat;
   }
   .faq-section {
     padding-top: 6rem;
@@ -162,6 +164,16 @@ footer {
   }
   .faq-section h1 {
     text-align: left;
+  }
+  .box-image {
+    height: 15rem;
+    width: 10rem;
+    position: absolute;
+    background-image: url("../images/illustration-box-desktop.svg");
+    background-repeat: no-repeat;
+    background-size: 150px;
+    left: -8.5rem;
+    top: 14rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
